--- a/AC-iOS-Multiple-MVC/AC-iOS-Multiple-MVC/Base.lproj/Main.storyboard
+++ b/AC-iOS-Multiple-MVC/AC-iOS-Multiple-MVC/Base.lproj/Main.storyboard
@@ -1,24 +1,148 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fzi-dH-8Bs">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--List View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ListViewController" customModule="AC_iOS_Multiple_MVC" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Pff-kT-Mxa">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="animalCell" rowHeight="197" id="TfD-Yp-0MN" customClass="AnimalTableViewCell" customModule="AC_iOS_Multiple_MVC" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="197"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TfD-Yp-0MN" id="3mx-6U-059">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="197"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kYC-Ua-FDG">
+                                                    <rect key="frame" x="28" y="19" width="120" height="80"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="eb0-dI-eoT"/>
+                                                        <constraint firstAttribute="width" constant="120" id="wBE-oT-GW1"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Animal Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X8V-4d-Nck">
+                                                    <rect key="frame" x="156" y="49" width="230" height="20.5"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Origins" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XbE-tF-Qf1">
+                                                    <rect key="frame" x="156" y="77.5" width="230" height="18"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="XbE-tF-Qf1" firstAttribute="top" secondItem="X8V-4d-Nck" secondAttribute="bottom" constant="8" id="7eb-Mc-F0s"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="X8V-4d-Nck" secondAttribute="trailing" constant="8" id="D7U-U7-STn"/>
+                                                <constraint firstItem="kYC-Ua-FDG" firstAttribute="leading" secondItem="3mx-6U-059" secondAttribute="leadingMargin" constant="8" id="MNi-zf-ag0"/>
+                                                <constraint firstItem="XbE-tF-Qf1" firstAttribute="leading" secondItem="kYC-Ua-FDG" secondAttribute="trailing" constant="8" id="WlH-HM-Tvi"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="XbE-tF-Qf1" secondAttribute="trailing" constant="8" id="e2D-Zw-xb8"/>
+                                                <constraint firstItem="kYC-Ua-FDG" firstAttribute="top" secondItem="3mx-6U-059" secondAttribute="topMargin" constant="8" id="hyz-4C-cxv"/>
+                                                <constraint firstItem="X8V-4d-Nck" firstAttribute="centerY" secondItem="kYC-Ua-FDG" secondAttribute="centerY" id="tGo-J0-LYo"/>
+                                                <constraint firstItem="X8V-4d-Nck" firstAttribute="leading" secondItem="kYC-Ua-FDG" secondAttribute="trailing" constant="8" id="x2c-Yb-Nzb"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="animalNameLabel" destination="X8V-4d-Nck" id="sQ2-I7-Twc"/>
+                                            <outlet property="animalOriginLabel" destination="XbE-tF-Qf1" id="Cgy-Eg-jEU"/>
+                                            <outlet property="animalThumbImage" destination="kYC-Ua-FDG" id="V2a-ZS-LaR"/>
+                                            <segue destination="JkF-vX-O1g" kind="show" id="hG0-0D-BR8"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Pff-kT-Mxa" secondAttribute="trailing" id="CFs-tW-Glo"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Pff-kT-Mxa" secondAttribute="bottom" id="ItU-jS-uUb"/>
+                            <constraint firstItem="Pff-kT-Mxa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="UqM-W2-kem"/>
+                            <constraint firstItem="Pff-kT-Mxa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="eke-hc-3Er"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="wS0-Xm-x7P"/>
+                    <connections>
+                        <outlet property="tableView" destination="Pff-kT-Mxa" id="qdz-BC-5UN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="602.89855072463774" y="111.83035714285714"/>
+        </scene>
+        <!--Animal Detail View Controller-->
+        <scene sceneID="aie-Gq-Mxf">
+            <objects>
+                <viewController id="JkF-vX-O1g" customClass="AnimalDetailViewController" customModule="AC_iOS_Multiple_MVC" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qKo-El-DTW">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3xn-AP-YIQ">
+                                <rect key="frame" x="0.0" y="88" width="414" height="358.5"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mpz-D0-2im">
+                                <rect key="frame" x="8" y="454.5" width="398" height="18"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="3xn-AP-YIQ" firstAttribute="top" secondItem="QZc-nA-9XT" secondAttribute="top" id="9GC-0y-Jua"/>
+                            <constraint firstItem="3xn-AP-YIQ" firstAttribute="height" secondItem="qKo-El-DTW" secondAttribute="height" multiplier="0.4" id="9le-yp-aaE"/>
+                            <constraint firstItem="QZc-nA-9XT" firstAttribute="trailing" secondItem="mpz-D0-2im" secondAttribute="trailing" constant="8" id="QmR-4C-dbv"/>
+                            <constraint firstItem="QZc-nA-9XT" firstAttribute="trailing" secondItem="3xn-AP-YIQ" secondAttribute="trailing" id="UDB-5c-3a4"/>
+                            <constraint firstItem="mpz-D0-2im" firstAttribute="top" secondItem="3xn-AP-YIQ" secondAttribute="bottom" constant="8" id="Vsi-Ic-nEm"/>
+                            <constraint firstItem="3xn-AP-YIQ" firstAttribute="leading" secondItem="QZc-nA-9XT" secondAttribute="leading" id="ecY-Qb-UG7"/>
+                            <constraint firstItem="mpz-D0-2im" firstAttribute="leading" secondItem="QZc-nA-9XT" secondAttribute="leading" constant="8" id="qyk-5J-yE3"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="QZc-nA-9XT"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Ng3-iQ-luT"/>
+                    <connections>
+                        <outlet property="animalDescriptionLabel" destination="mpz-D0-2im" id="BUo-pV-LrA"/>
+                        <outlet property="animalDetailImage" destination="3xn-AP-YIQ" id="p0a-yV-iuR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hel-5l-eKm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1276.8115942028987" y="111.83035714285714"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="GVL-3E-f6S">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fzi-dH-8Bs" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eG4-xm-u3J">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Qnu-ZU-VEH"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bqB-Nk-YAh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-57.971014492753625" y="111.83035714285714"/>
         </scene>
     </scenes>
 </document>
